--- a/index.html
+++ b/index.html
@@ -14,11 +14,60 @@
     <div id="newBookButtonDiv">
         <button id="newBookButton" class="button">NEW BOOK</button>
     </div>
-    <ul class="libraryList" id="libraryList">
+    <div class="libraryList" id="libraryList">
+        <div type="text/html" id="newBookForm" class="form">
+            <form id="newBookForm" class="form">
+                <div class="formInput">
+                    <label for="title">Title</label>
+                    <input type="text" id="title" name="title">
+                </div> 
+                <div class="formInput">
+                    <label for="author">Author</label>
+                    <input type="text" id="author" name="author">
+                </div> 
+                <div class="formInput">
+                    <label for="pages">Number of Pages</label>
+                    <input type="text" id="pages" name="pages">
+                </div>  
+                <div class="formInput">
+                    <label for="read">Have your read it?</label>
+                    <input type="radio" name="read" id="read" value="Read">
+                    <input type="radio" name="read" id="notRead" value="Not read">
+                </div>
+                <div class="formInput">
+                    <input type="button" id="addBookButton" class="button" value="Add Book">
+                </div>
+            </form>
+        </div>
+    </div>
 
-    </ul>
 </body>
 
 <script src="scripts/script.js"></script>
+<!-- Hidden form to get with new book button -->
+<!-- <script type="text/html" id="newBookForm" class="form">
+    <form id="newBookForm" class="form">
+        <div class="formInput">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title">
+        </div> 
+        <div class="formInput">
+            <label for="author">Author</label>
+            <input type="text" id="author" name="author">
+        </div> 
+        <div class="formInput">
+            <label for="pages">Number of Pages</label>
+            <input type="text" id="pages" name="pages">
+        </div>  
+        <div class="formInput">
+            <label for="read">Have your read it?</label>
+            <input type="radio" name="read" id="read" value="Read">
+            <input type="radio" name="read" id="notRead" value="Not read">
+        </div>
+        <div class="formInput">
+            <input type="submit" id="addBookButton" class="button" value="Add Book">
+        </div>
+    </form>
+</script> -->
 
 </html>
