--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <title>Library</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
@@ -13,32 +13,38 @@
 <body>
     <div class="new-book-form">
         <form>
-            <label for="title">Title:</label>
-            <input type="text" name="title">
-            <label for="author">Author:</label>
-            <input type="text" name="author">
-            <label for="pages"># Pages:</label>
-            <input type="number" name="pages">
-            <label for="read">Read:</label>
-            <input type="checkbox" name="read">
+            <label class="form-label" for="title">Title:</label>
+            <input class="form-control" type="text" name="title">
+            <label class="form-label" for="author">Author:</label>
+            <input class="form-control" type="text" name="author">
+            <label class="form-label" for="pages"># Pages:</label>
+            <input class="form-control" type="number" name="pages">
+            <label class="form-label" for="read">Read:</label>
+            <input class="form-check-input" type="checkbox" name="read">
             <input type="submit" value="Add book to library">
         </form>
     </div>
-    <button type="button" class="open-form">Add new book</button>
+    <button type="button" class="btn btn-dark open-form">Add new book</button>
     <div class="book-list">
-        <table id="book-table">
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Pages</th>
-                <th>Read</th>
-                <th>Remove</th>
-            </tr>
+        <table class="table" id="book-table">
+            <thead>
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Pages</th>
+                    <th scope="col">Read</th>
+                    <th scope="col">Remove</th>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
         </table>
     </div>
 
 </body>
 
 <script src="scripts/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </html>
